02_vpc.tf
resource "aws_vpc" "lsy_vpc" {
    cidr_block = "10.0.0.0/16"
    enable_dns_hostnames = true
    tags = {
      "Name" = "lsy-vpc"
    }
}
